# cvcomposer

./: CMakeLists.txt  README.md  abstractnode.h  composerexecutor.cpp  composerexecutor.h  composermodel.cpp  composermodel.h  composerscene.cpp  composerscene.h  composerscheduler.cpp  composerscheduler.h  composerwidget.cpp  composerwidget.h  connection.cpp  connection.h  cvcomposer.pro  cvutils.cpp  cvutils.h  filterslistwidget.cpp  filterslistwidget.h  genericnode.cpp  genericnode.h  interactivegraphicsview.cpp  licence  license  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  makeprocessor.sh  nodeslistwidget.cpp  nodeslistwidget.h  nodestypesmanager.cpp  nodestypesmanager.h  plug.cpp  plug.h  plugdefinition.h  plugtype.cpp  plugtype.h  properties.cpp  (+2 more)
.github/workflows/: build-win64-setup.yml
execution/: composerexecutor.cpp  composerexecutor.h  composerscheduler.cpp  composerscheduler.h  executorsettings.h
global/: cvconstants.h  cvutils.cpp  cvutils.h  parser.cpp  parser.h  properties.cpp  properties.h  threestatebool.h  utils.h
gui/: advancedimageviewer.cpp  advancedimageviewer.h  boundedgraphicsproxywidget.cpp  boundedgraphicsproxywidget.h  composerscene.cpp  composerscene.h  composerwidget.cpp  composerwidget.h  connectionitem.cpp  connectionitem.h  customitems.h  cvcomposerstyle.cpp  cvcomposerstyle.h  editsettingsdialog.cpp  editsettingsdialog.h  editsettingsdialog.ui  errordisplaydialog.cpp  errordisplaydialog.h  errordisplaydialog.ui  genericnodeitem.cpp  genericnodeitem.h  genericnodewidget.cpp  genericnodewidget.h  interactivegraphicsview.cpp  interactivegraphicsview.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  nodeslistwidget.cpp  nodestypesmanager.cpp  nodestypesmanager.h  plugitem.cpp  plugitem.h  plugtypeshelpdialog.cpp  plugtypeshelpdialog.h  plugtypeshelpdialog.ui  processorsitemmodel.cpp  processorsitemmodel.h  processorsmodelfilter.cpp  processorsmodelfilter.h
gui/command/: commandid.h  createnodecommand.cpp  createnodecommand.h  editconnectioncommand.cpp  editconnectioncommand.h  editvaluecommand.cpp  editvaluecommand.h  movenodecommand.cpp  movenodecommand.h  removenodecommand.cpp  removenodecommand.h
model/: circle.h  composermodel.cpp  composermodel.h  connection.cpp  connection.h  contour.h  ellipse.h  line.h  node.cpp  node.h  plug.cpp  plug.h  plugdefinition.h  plugtype.cpp  plugtype.h  segment.h  triangle.h
nodes/: abstractnode.cpp  abstractnode.h  blurnode.cpp  blurnode.h  gaussianblurnode.cpp  gaussianblurnode.h  genericnode.cpp  genericnode.h  imagefilenode.cpp  imagefilenode.h  imagepreviewernode.cpp  imagepreviewernode.h  imageviewernode.cpp  imageviewernode.h
nodesviews/: abstractnodeview.cpp  abstractnodeview.h  abstractnodewidget.cpp  abstractnodewidget.h  bilateralfilterwidget.cpp  bilateralfilterwidget.h  bilateralfilterwidget.ui  bluritem.cpp  bluritem.h  blurwidget.cpp  blurwidget.h  blurwidget.ui  connectionitem.cpp  connectionitem.h  customitems.h  dockableimageviewerwidget.cpp  dockableimageviewerwidget.h  dockableimageviewerwidget.ui  gaussianblurwidget.cpp  gaussianblurwidget.h  gaussianblurwidget.ui  genericitem.cpp  genericitem.h  genericnodeitem.cpp  genericnodeitem.h  genericnodewidget.cpp  genericnodewidget.h  imagedockviewer.cpp  imagedockviewer.h  imagedockwidget.cpp  imagedockwidget.h  imagedockwidget.ui  imagefileitem.cpp  imagefileitem.h  imagefilewidget.cpp  imagefilewidget.h  imagefilewidget.ui  imagefromfilewidget.cpp  imagefromfilewidget.h  imagefromfilewidget.ui  (+17 more)
plugwidget/: abstractplugwidget.cpp  abstractplugwidget.h  booleanwidget.cpp  booleanwidget.h  colorwidget.cpp  colorwidget.h  dataviewerwidget.cpp  dataviewerwidget.h  dockableimageviewerwidget.cpp  dockableimageviewerwidget.h  doubleitemdelegate.cpp  doubleitemdelegate.h  doublewidget.cpp  doublewidget.h  enumerationwidget.cpp  enumerationwidget.h  folderpathwidget.cpp  folderpathwidget.h  imagedockwidget.ui  imagepathwidget.cpp  imagepathwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  imageviewerdockwidget.cpp  imageviewerdockwidget.h  imageviewerdockwidget.ui  imageviewerwidget.cpp  imageviewerwidget.h  kerneldefinitionwidget.cpp  kerneldefinitionwidget.h  pathwidget.cpp  pathwidget.h  pointwidget.cpp  pointwidget.h  sizewidget.cpp  sizewidget.h  stringwidget.cpp  stringwidget.h
plugwidgets/: abstractplugwidget.cpp  abstractplugwidget.h  colorwidget.cpp  colorwidget.h  dockableimageviewerwidget.cpp  dockableimageviewerwidget.h  doubleitemdelegate.cpp  doubleitemdelegate.h  doublewidget.cpp  doublewidget.h  enumerationwidget.cpp  enumerationwidget.h  imagepathwidget.cpp  imagepathwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  imageviewerdockwidget.cpp  kerneldefinitionwidget.cpp  kerneldefinitionwidget.h  pointwidget.cpp  pointwidget.h  sizewidget.cpp  sizewidget.h  stringwidget.cpp  stringwidget.h
processor/: abstractprocessor.cpp  abstractprocessor.h  helpmessage.h  helpmessagetype.h  processorlisttype.h  processorsfactory.cpp  processorsfactory.h
processor/analyzer/: discretefouriertransformprocessor.cpp  discretefouriertransformprocessor.h  findcontoursprocessor.cpp  findcontoursprocessor.h  haarcascadeprocessor.cpp  haarcascadeprocessor.h  mixtureofgaussian2processor.cpp  (+1 more)
processors/: abstractprocessor.cpp  abstractprocessor.h  bilateralfilterprocessor.cpp  bilateralfilterprocessor.h  blurprocessor.cpp  blurprocessor.h  cameraprocessor.cpp  cameraprocessor.h  customfilterprocessor.cpp  customfilterprocessor.h  dilateprocessor.cpp  dilateprocessor.h  dockableimageviewerprocessor.cpp  dockableimageviewerprocessor.h  erodeprocessor.cpp  erodeprocessor.h  gaussianblurprocessor.cpp  gaussianblurprocessor.h  imagefromfileprocessor.cpp  imagefromfileprocessor.h  imagepreviewerprocessor.cpp  imagepreviewerprocessor.h  kernelprocessor.cpp  kernelprocessor.h  medianblurprocessor.cpp  medianblurprocessor.h  morphologytransformationprocessor.cpp  morphologytransformationprocessor.h  thresholdprocessor.cpp  thresholdprocessor.h
resources/: credits.html  licence.html
setup/: cvcomposer.iss
(+109 files in other folders)
